# Lab8_Object-oriented-programming

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  edu.pyoop.code-workspace  pyproject.toml
examples/: barrier_example.py  condition_example.py  event_example.py  semaphore_example.py  timer_example.py
tasks/: pipeline.py  task1.py
tests/: test_task1.py
